Remove coupling between v3 and internal dto packages
The v3 dto packages, mainly used for V3 API now were relying on classes from v4 dtos. Which is backwards and there is no
v4 api yet. As such the v4 dto's are really the internal dto's for the business logic and should evolve independendly
of API models and be converted at the API tier(s) into the proper representation. This change removes the coupling and
makes v3 package self contained.